--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
 "host": "localhost",
 "port": ":8080",
-"cex_source": "http://localhost:8080/static/cex/"
+"test_cex_source": "https://raw.githubusercontent.com/cite-architecture/cite-services-spec/master/resources/test1.cex",
+"cex_source": "https://raw.githubusercontent.com/ThomasK81/CTSTextservice/master/static/cex/"
 }
